--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
                 <img src="assets/img/trippal-app-1.png" alt="Screenshot">
                 <img src="assets/img/iphone-xr.svg" alt="iPhone XR">
               </div>
-              <div class="decoration-wrapper d-none d-md-block">
+              <!--<div class="decoration-wrapper d-none d-md-block">
                 <div class="decoration middle-y scale-2" data-jarallax-element="40">
                   <img class="bg-primary-2" src="assets/img/decorations/deco-blob-8.svg" alt="deco-blob-8 decoration" data-inject-svg />
                 </div>
                 <div class="decoration left top scale-2">
                   <img class="bg-primary" src="assets/img/decorations/deco-dots-6.svg" alt="deco-dots-6 decoration" data-inject-svg />
                 </div>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
@@ -105,9 +105,9 @@
         </div>
       </div>
     </div>
-    <div class="divider flip-x">
+    <!--<div class="divider flip-x">
       <img class="bg-primary-3" src="assets/img/dividers/divider-1.svg" alt="divider graphic" data-inject-svg />
-    </div>
+    </div>-->
   </section>
 <!--Works Justice.gov-->
 <section class="has-divider bg-primary-alt">
@@ -119,14 +119,14 @@
               <div class="layer-2">
                 <img src="assets/img/justice-app-2.png" alt="justice">
               </div>
-              <div class="decoration-wrapper d-none d-md-block">
+              <!--<div class="decoration-wrapper d-none d-md-block">
                 <div class="decoration middle-y scale-2" data-jarallax-element="40">
                   <img class="bg-primary-2" src="assets/img/decorations/deco-blob-8.svg" alt="deco-blob-8 decoration" data-inject-svg />
                 </div>
                 <div class="decoration left top scale-2">
                   <img class="bg-primary" src="assets/img/decorations/deco-dots-6.svg" alt="deco-dots-6 decoration" data-inject-svg />
                 </div>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
@@ -158,9 +158,9 @@
         </div>
       </div>
     </div>
-    <div class="divider flip-x">
+    <!--<div class="divider flip-x">
       <img class="bg-primary-3" src="assets/img/dividers/divider-1.svg" alt="divider graphic" data-inject-svg />
-    </div>
+    </div>-->
   </section>
 <!--Works Clique-->
 <section class="has-divider bg-primary-alt">
@@ -173,14 +173,14 @@
                 <img src="assets/img/clique-app-1.png" alt="Screenshot">
                 <img src="assets/img/iphone-xr.svg" alt="iPhone XR">
               </div>
-              <div class="decoration-wrapper d-none d-md-block">
+              <!--<div class="decoration-wrapper d-none d-md-block">
                 <div class="decoration middle-y scale-2" data-jarallax-element="40">
                   <img class="bg-primary-2" src="assets/img/decorations/deco-blob-8.svg" alt="deco-blob-8 decoration" data-inject-svg />
                 </div>
                 <div class="decoration left top scale-2">
                   <img class="bg-primary" src="assets/img/decorations/deco-dots-6.svg" alt="deco-dots-6 decoration" data-inject-svg />
                 </div>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
@@ -212,9 +212,9 @@
         </div>
       </div>
     </div>
-    <div class="divider flip-x">
+    <!--<div class="divider flip-x">
       <img class="bg-primary-3" src="assets/img/dividers/divider-1.svg" alt="divider graphic" data-inject-svg />
-    </div><a name="about"></a>
+    </div>--><a name="about"></a>
   </section>
 
 
