--- a/trippal-case-study.html
+++ b/trippal-case-study.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Leap Bootstrap Theme and HTML Template</title>
+    <title>byjennyhuang.com - TripPal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A corporate Bootstrap theme by Medium Rare">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
@@ -196,7 +196,7 @@
 
     <section style="padding:50px;"></section>
 
-<!--Other Projects-->
+<!--Other Projects
     <section class="bg-primary-alt">
       <div class="container">
         <div class="row mb-4">
@@ -228,7 +228,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
 <!--Footer-->
 <!--
